--- a/index.html
+++ b/index.html
@@ -341,6 +341,12 @@
       transform: translateY(-3px);
       box-shadow: 0 8px 20px rgba(255, 215, 0, 0.6);
     }
+    .server-list-img {
+      width: 100%;
+      border-radius: 12px;
+      border: 2px solid var(--primary-color);
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -396,7 +402,7 @@
     </div>
     <div class="images">
       <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v1.png" alt="VIP Image 1" />
-      <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v2.png" alt="VIP Image 2" />
+      <img src="1000001218.jpg" alt="JK VIP VPN Server List" />
     </div>
   </div>
 
