--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     </div>
     <div class="images">
       <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v1.png" alt="VIP Image 1" />
-      <img src="1000001218.jpg" alt="JK VIP VPN Server List" />
+      <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v2.png" alt="JK VIP VPN Server List" />
     </div>
   </div>
 
