--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@
         <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v1.png" alt="VIP Image 1" />
         <div class="red-circle"></div>
         <div class="additional-images">
-          <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/additional1.jpg" alt="Additional Image 1">
-          <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/additional2.jpg" alt="Additional Image 2">
+          <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v1.png" alt="Additional Image 1">
+          <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v2.png" alt="Additional Image 2">
         </div>
       </div>
       <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v2.png" alt="JK VIP VPN Server List" />
