--- a/index.html
+++ b/index.html
@@ -211,17 +211,23 @@
     }
     .images {
       display: flex;
-      justify-content: space-between;
       flex-wrap: wrap;
       gap: 20px;
       margin-top: 20px;
+      justify-content: center;
     }
     .images img {
-      width: 48%;
+      width: 100%;
+      max-width: 400px;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
       transition: transform 0.3s ease;
       border: 2px solid var(--primary-color);
+    }
+    @media(min-width: 768px) {
+      .images img {
+        width: calc(50% - 10px);
+      }
     }
     .images img:hover {
       transform: scale(1.03);
