--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
                 <!-- VIP PLAN 1 -->
                 <div class="plan">
                     <h3>VIP PLAN 1</h3>
-                    <div class="price">50 <span>THB/month</span></div>
+                    <div class="price">50 <span>THB/1month</span></div>
                     <ul class="features">
                         <li>✅ PRICE 50 THB</li>
                         <li>✅ No Ads</li>
@@ -1158,7 +1158,7 @@
                 <!-- VIP PLAN 2 -->
                 <div class="plan">
                     <h3>VIP PLAN 2</h3>
-                    <div class="price">100 <span>THB/month</span></div>
+                    <div class="price">100 <span>THB/2months</span></div>
                     <ul class="features">
                         <li>✅ PRICE 100 THB</li>
                         <li>✅ No Ads</li>
@@ -1179,7 +1179,7 @@
                 <!-- VIP PLAN 3 -->
                 <div class="plan">
                     <h3>VIP PLAN 3</h3>
-                    <div class="price">150 <span>THB/month</span></div>
+                    <div class="price">150 <span>THB/3months</span></div>
                     <ul class="features">
                         <li>✅ PRICE 150 THB</li>
                         <li>✅ No Ads</li>
@@ -1200,7 +1200,7 @@
                 <!-- VIP PLAN 4 -->
                 <div class="plan">
                     <h3>VIP PLAN 4</h3>
-                    <div class="price">200 <span>THB/month</span></div>
+                    <div class="price">200 <span>THB/4months</span></div>
                     <ul class="features">
                         <li>✅ PRICE 200 THB</li>
                         <li>✅ No Ads</li>
@@ -1221,7 +1221,7 @@
                 <!-- VIP PLAN 5 -->
                 <div class="plan">
                     <h3>VIP PLAN 5</h3>
-                    <div class="price">250 <span>THB/month</span></div>
+                    <div class="price">250 <span>THB/5months</span></div>
                     <ul class="features">
                         <li>✅ PRICE 250 THB</li>
                         <li>✅ No Ads</li>
@@ -1242,7 +1242,7 @@
                 <!-- VIP PLAN 6 -->
                 <div class="plan">
                     <h3>VIP PLAN 6</h3>
-                    <div class="price">300 <span>THB/month</span></div>
+                    <div class="price">300 <span>THB/6months</span></div>
                     <ul class="features">
                         <li>✅ PRICE 300 THB</li>
                         <li>✅ No Ads</li>
