--- a/index.html
+++ b/index.html
@@ -1595,18 +1595,18 @@
                     </button>
                 </div>
                 
-                <!-- Kasikorn Bank -->
+                <!-- Bangkok Bank -->
                 <div class="method">
                     <div class="method-icon">
                         <i class="fas fa-university"></i>
                     </div>
-                    <div class="method-name" data-en="Kasikorn Bank" data-th="ธนาคารกสิกรไทย" data-my="Kasikorn ဘဏ်">Kasikorn Bank</div>
+                    <div class="method-name" data-en="Bangkok Bank" data-th="ธนาคารกรุงเทพ" data-my="ဘန်ကောက် ဘဏ်">Bangkok Bank</div>
                     <div class="qr-code">
-                        <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/pp.png" alt="Kasikorn QR Code" style="width:100%;height:100%;object-fit:contain;">
+                        <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/pp.png" alt="Bangkok Bank QR Code" style="width:100%;height:100%;object-fit:contain;">
                     </div>
-                    <div class="account-info" data-en="Account: 1818206387" data-th="บัญชี: 1818206387" data-my="အကောင့် - 1818206387">Account: 1818206387</div>
-                    <div class="account-info" data-en="Name: MR - KHIN NAING LIN" data-th="ชื่อ: MR - KHIN NAING LIN" data-my="အမည် - MR - KHIN NAING LIN">Name: MR - KHIN NAING LIN</div>
-                    <button class="copy-btn" onclick="copyToClipboard('1818206387')">
+                    <div class="account-info" data-en="Account: 0724683644" data-th="บัญชี: 0724683644" data-my="အကောင့် - 0724683644">Account: 0724683644</div>
+                    <div class="account-info" data-en="Name: MR - JUE HTET KHAING " data-th="ชื่อ: MR - JUE HTET KHAING " data-my="အမည် - MR - JUE HTET KHAING ">Name: MR - JUE HTET KHAING</div>
+                    <button class="copy-btn" onclick="copyToClipboard('0724683644')">
                         <i class="fas fa-copy"></i> <span data-en="Copy Account" data-th="คัดลอกบัญชี" data-my="အကောင့်ကိုကူးယူပါ">Copy Account</span>
                     </button>
                 </div>
