--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@
             <i class="fab fa-facebook-messenger"></i>
             <span class="floating-tooltip" data-en="Message Us on Messenger" data-th="ส่งข้อความถึงเราผ่าน Messenger" data-my="Messenger မှာစာပို့ပါ">Message Us on Messenger</span>
         </a>
-        <a href="https://github.com/THANDARLIN2015/Test/releases/download/v2.0.0/JK.VIP.VPN_2.0.0.apk" class="floating-btn download-btn-floating">
+        <a href="https://github.com/THANDARLIN2015/JKVPN/releases/download/V2.2.0/JK.VIP.VPN_2.2.0.apk" class="floating-btn download-btn-floating">
             <i class="fas fa-download"></i>
             <span class="floating-tooltip" data-en="Download APK" data-th="ดาวน์โหลด APK" data-my="APK ဒေါင်းလုဒ်ရယူပါ">Download APK</span>
         </a>
@@ -1126,8 +1126,8 @@
                data-my="ကျွန်ုပ်တို့၏အကောင်းဆုံးဖြစ်အောင် ပြုပြင်ထားသော application ဖြင့် သင့်မိုဘိုင်းစက်ပစ္စည်းပေါ်တွင် အကောင်းဆုံး VPN အတွေ့အကြုံကိုရယူပါ">Get the best VPN experience on your mobile device with our optimized application</p>
             <div class="download-btn-container">
                 <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/j.png" alt="JKVPN Logo" class="download-logo">
-                <a href="https://github.com/THANDARLIN2015/Test/releases/download/v2.0.0/JK.VIP.VPN_2.0.0.apk" class="download-btn">
-                    <i class="fas fa-download"></i> <span data-en="Download APK (v2.0.0)" data-th="ดาวน์โหลด APK (v2.5.0)" data-my="APK ဒေါင်းလုဒ်ရယူပါ (v2.5.0)">Download APK (v2.5.0)</span>
+                <a href="https://github.com/THANDARLIN2015/JKVPN/releases/download/V2.2.0/JK.VIP.VPN_2.2.0.apk" class="download-btn">
+                    <i class="fas fa-download"></i> <span data-en="Download APK (v2.2.0)" data-th="ดาวน์โหลด APK (v2.2.0)" data-my="APK ဒေါင်းလုဒ်ရယူပါ (v2.2.0)">Download APK (v2.2.0)</span>
                 </a>
             </div>
         </div>
@@ -1444,7 +1444,7 @@
                 <!-- VIP PLAN 1 -->
                 <div class="plan">
                     <h3 data-en="VIP PLAN 1" data-th="แพ็คเกจ VIP 1" data-my="VIP အစီအစဉ် 1">VIP PLAN 1</h3>
-                    <div class="price">50 <span data-en="THB/month" data-th="บาท/เดือน" data-my="ဘတ်/လ">THB/month</span></div>
+                    <div class="price">50 <span data-en="THB/1month" data-th="บาท/1เดือน" data-my="ဘတ်/1လ">THB/month</span></div>
                     <ul class="features">
                         <li data-en="✅ PRICE 50 THB" data-th="✅ ราคา 50 บาท" data-my="✅ ဈေးနှုန်း 50 ဘတ်">✅ PRICE 50 THB</li>
                         <li data-en="✅ No Ads" data-th="✅ ไม่มีโฆษณา" data-my="✅ ကြော်ငြာမရှိ">✅ No Ads</li>
@@ -1465,7 +1465,7 @@
                 <!-- VIP PLAN 2 -->
                 <div class="plan">
                     <h3 data-en="VIP PLAN 2" data-th="แพ็คเกจ VIP 2" data-my="VIP အစီအစဉ် 2">VIP PLAN 2</h3>
-                    <div class="price">100 <span data-en="THB/month" data-th="บาท/เดือน" data-my="ဘတ်/လ">THB/month</span></div>
+                    <div class="price">100 <span data-en="THB/2month" data-th="บาท/2เดือน" data-my="ဘတ်/2လ">THB/month</span></div>
                     <ul class="features">
                         <li data-en="✅ PRICE 100 THB" data-th="✅ ราคา 100 บาท" data-my="✅ ဈေးနှုန်း 100 ဘတ်">✅ PRICE 100 THB</li>
                         <li data-en="✅ No Ads" data-th="✅ ไม่มีโฆษณา" data-my="✅ ကြော်ငြာမရှိ">✅ No Ads</li>
@@ -1486,7 +1486,7 @@
                 <!-- VIP PLAN 3 -->
                 <div class="plan">
                     <h3 data-en="VIP PLAN 3" data-th="แพ็คเกจ VIP 3" data-my="VIP အစီအစဉ် 3">VIP PLAN 3</h3>
-                    <div class="price">150 <span data-en="THB/month" data-th="บาท/เดือน" data-my="ဘတ်/လ">THB/month</span></div>
+                    <div class="price">150 <span data-en="THB/3month" data-th="บาท/3เดือน" data-my="ဘတ်/3လ">THB/month</span></div>
                     <ul class="features">
                         <li data-en="✅ PRICE 150 THB" data-th="✅ ราคา 150 บาท" data-my="✅ ဈေးနှုန်း 150 ဘတ်">✅ PRICE 150 THB</li>
                         <li data-en="✅ No Ads" data-th="✅ ไม่มีโฆษณา" data-my="✅ ကြော်ငြာမရှိ">✅ No Ads</li>
