--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
                 </div>
                 <h3 class="section-title" data-en="SIM & PACKAGE" data-th="ซิมและแพ็คเกจ" data-my="SIM နှင့် Package">SIM & PACKAGE</h3>
                 <p class="section-description" data-en="Find the best SIM packages for VPN usage" data-th="ค้นหาแพ็คเกจซิมที่ดีที่สุดสำหรับการใช้งาน VPN" data-my="VPN အသုံးပြုရန်အတွက် အကောင်းဆုံး SIM Package များရှာဖွေရန်">Find the best SIM packages for VPN usage</p>
-                <a href="https://simpackage.netlify.app" class="section-link" data-en="View Packages" data-th="ดูแพ็คเกจ" data-my="Package များကြည့်ရန်">View Packages</a>
+                <a href="https://thandarlin2015.github.io/SIM/" class="section-link" data-en="View Packages" data-th="ดูแพ็คเกจ" data-my="Package များကြည့်ရန်">View Packages</a>
             </div>
         </div>
     </section>
