--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
             </div>
             
             <!-- SIM & PACKAGE -->
-            <div class="section-card" onclick="window.open('https://simpackage.netlify.app', '_blank')">
+            <div class="section-card" onclick="window.open('https://thandarlin2015.github.io/SIM/', '_blank')">
                 <div class="section-icon">
                     <i class="fas fa-sim-card"></i>
                 </div>
